--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -24,11 +24,11 @@
             <nav class="navbar navbar-expand p-0"  id="navegacao">
                 <div id="telaMenorBotao"></div>
                 <ul class="navbar-nav">
-                    <li class="navbar-item"><a href="../paginas/home.html" class="nav-link text-dark">Mais vendidos</a></li>
-                    <li class="navbar-item"><a href="#" class="nav-link text-dark">Livros em oferta</a></li>
-                    <li class="navbar-item"><a href="#" class="nav-link text-dark">E-Books</a></li>
-                    <li class="navbar-item"><a href="#" class="nav-link text-dark">Lançamentos</a></li>
-                    <li class="navbar-item"><a href="#" class="nav-link text-dark">Pré-venda</a></li>
+                    <li class="navbar-item"><a href="home.html" class="nav-link text-dark">Mais vendidos</a></li>
+                    <li class="navbar-item"><a href="ofertas.html" class="nav-link text-dark">Livros em oferta</a></li>
+                    <li class="navbar-item"><a href="ebooks.html" class="nav-link text-dark">E-Books</a></li>
+                    <li class="navbar-item"><a href="lancamentos.html" class="nav-link text-dark">Lançamentos</a></li>
+                    <li class="navbar-item"><a href="preVenda.html" class="nav-link text-dark">Pré-venda</a></li>
                     <li class="navbar-item"><a href="contato.html" class="nav-link text-dark">Contate-nos</a></li>
                 </ul>
                 <form action="#">
@@ -47,11 +47,11 @@
                 <div id="fecharTelaMenor"></div>
                 <ul class="navbar-nav">
                     <li class="navbar-item"><a href="home.html" class="nav-link text-dark">Mais vendidos</a></li>
-                    <li class="navbar-item"><a href="#" class="nav-link text-dark">Livros em oferta</a></li>
-                    <li class="navbar-item"><a href="#" class="nav-link text-dark">E-Books</a></li>
-                    <li class="navbar-item"><a href="#" class="nav-link text-dark">Lançamentos</a></li>
-                    <li class="navbar-item"><a href="#" class="nav-link text-dark">Pré-venda</a></li>
-                    <li class="navbar-item"><a href="contato.html" class="nav-link text-dark">Contate-nos</a></li>
+                        <li class="navbar-item"><a href="ofertas.html" class="nav-link text-dark">Livros em oferta</a></li>
+                        <li class="navbar-item"><a href="ebooks.html" class="nav-link text-dark">E-Books</a></li>
+                        <li class="navbar-item"><a href="lancamentos.html" class="nav-link text-dark">Lançamentos</a></li>
+                        <li class="navbar-item"><a href="preVenda.html" class="nav-link text-dark">Pré-venda</a></li>
+                        <li class="navbar-item"><a href="contato.html" class="nav-link text-dark">Contate-nos</a></li>
                     <li class="container d-flex flex-row justify-content-around">
                         <form action="#">
                             <input type="search" placeholder="Pesquise">
