--- a/paginas/lancamentos.html
+++ b/paginas/lancamentos.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../estilos/geral.css">
     <link rel="stylesheet" href="../estilos/bootstrap.css">
-    <link rel="stylesheet" href="../estilos/home.css">
+    <link rel="stylesheet" href="../estilos/paginaDois.css">
     <link rel="stylesheet" href="../estilos/styleResponsividade.css" media="screen and (max-width: 800px)">
     <link rel="stylesheet" href="../estilos/responsividadeDois.css" media="screen and (max-width: 1250px) and (min-width: 801px)">
 
@@ -28,11 +28,11 @@
                 <nav class="navbar navbar-expand p-0"  id="navegacao">
                     <div id="telaMenorBotao"></div>
                     <ul class="navbar-nav">
-                        <li class="navbar-item"><a href="#" class="nav-link text-dark fw-bold">Mais vendidos</a></li>
+                        <li class="navbar-item"><a href="home.html" class="nav-link text-dark">Mais vendidos</a></li>
                         <li class="navbar-item"><a href="ofertas.html" class="nav-link text-dark">Livros em oferta</a></li>
-                        <li class="navbar-item"><a href="#" class="nav-link text-dark">E-Books</a></li>
-                        <li class="navbar-item"><a href="#" class="nav-link text-dark">Lançamentos</a></li>
-                        <li class="navbar-item"><a href="#" class="nav-link text-dark">Pré-venda</a></li>
+                        <li class="navbar-item"><a href="ebooks.html" class="nav-link text-dark">E-Books</a></li>
+                        <li class="navbar-item"><a href="#" class="nav-link text-dark fw-bold">Lançamentos</a></li>
+                        <li class="navbar-item"><a href="preVenda.html" class="nav-link text-dark">Pré-venda</a></li>
                         <li class="navbar-item"><a href="contato.html" class="nav-link text-dark">Contate-nos</a></li>
                     </ul>
                     <form action="#">
@@ -51,10 +51,10 @@
                 <div id="telaMenor">
                     <div id="fecharTelaMenor"></div>
                     <ul class="navbar-nav">
-                        <li class="navbar-item"><a href="#" class="nav-link text-dark fw-bold">Mais vendidos</a></li>
+                        <li class="navbar-item"><a href="home.html" class="nav-link text-dark">Mais vendidos</a></li>
                         <li class="navbar-item"><a href="ofertas.html" class="nav-link text-dark">Livros em oferta</a></li>
                         <li class="navbar-item"><a href="ebooks.html" class="nav-link text-dark">E-Books</a></li>
-                        <li class="navbar-item"><a href="lancamentos.html" class="nav-link text-dark">Lançamentos</a></li>
+                        <li class="navbar-item"><a href="#" class="nav-link text-dark fw-bold">Lançamentos</a></li>
                         <li class="navbar-item"><a href="preVenda.html" class="nav-link text-dark">Pré-venda</a></li>
                         <li class="navbar-item"><a href="contato.html" class="nav-link text-dark">Contate-nos</a></li>
                         <li class="container d-flex flex-row justify-content-around">
@@ -173,8 +173,9 @@
                             </button>
                         </div>
                     </div>
-                    <h1>Mais vendidos</h1>
-                    <div class="container p-0 m-0 d-flex gap-1 flex-wrap justify-content-center">
+                    <h1>Lançamentos</h1><br>
+                    <h1>Em desenvolvimento...</h1>
+                    <!-- <div class="container p-0 m-0 d-flex gap-1 flex-wrap justify-content-center">
                         <div class="container col-2" id="livros">
                             <div class="imagensLivros"> 
                                 <img src="../imagens/Mais esperto que o Diabo.jpg" alt="" srcset="">
@@ -411,18 +412,21 @@
                             </form>
                         </div>
 
-                    </div>
-                    <div class="container-fluid my-2">
-                        <a href="paginaDois.html"><p>Próxima página -></p></a>
+                    </div> -->
+                    <div class="container-fluid my-2 d-flex justify-content-around">
+                        <a href="home.html"><p><-Página anterior</p></a>
+                        <a href="#"><p>Próxima página -></p></a>
                     </div>
                    
                 </div>
                 
             </section>
         </main>
-        <footer class="container-fluid m0 p-0">
-            <div class="container-fluid bg-dark m-0 p-0">
+        <footer>
+            <div class="container-fluid bg-dark">
                 <p class="text-white text-center">Todos os direitos reservados</p>
+                <p></p>
+
             </div>
         </footer>
     </div>
